--- a/2nd.html
+++ b/2nd.html
@@ -6,9 +6,9 @@
         <title>HI Hello SEC-B</title>
     </head>
     <body>
-        I am Sandeep student of KV
+        I am Pratik student of BFS
         <BR>
-            CDA ,SEC-1,CUTTACK-14 
+            CDA ,SEC-6,CUTTACK-14 
             <BR>
                 In the year 2023 pass out
 
